# joystick-recorder

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: flags.cmake  sourcelist.cmake
src/: cmd.cc  cmd.h  device.cc  device.h  global.cc  global.h  main.cc
